test: controller 테스트 (숫자 5개 일치 시 보너스 번호를 통한 비교 메소드 확인)